--- a/ui/html/partials/nav.html
+++ b/ui/html/partials/nav.html
@@ -6,6 +6,7 @@
     <div class="user-options">
         {{if .IsAuthenticated}}
             <form action="/user/logout" method="POST">
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <button>Logout</button>
             </form>
         {{else}}
